--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,6 @@
     <button mat-icon-button>
       <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
     </button>
-    <h1>Plateforme recherche</h1>
     <span class="menu-spacer"></span>
     <div>
       <a mat-button routerLink="/"> Acceuil </a>
@@ -28,13 +27,26 @@
         <button mat-menu-item [routerLink]="['/productions','Communication']">Consulter communications</button>
       </mat-menu>
 
-      <a mat-button [matMenuTriggerFor]="menuAdmin">Administrateur</a>
+      <a mat-button [matMenuTriggerFor]="menuAdmin" style="margin-right: 50px">Administrateur</a>
       <mat-menu #menuAdmin="matMenu">
         <button mat-menu-item routerLink="/users">Gestion des utlisateurs</button>
         <button mat-menu-item routerLink="/chercheurs">Gestion des chercheurs</button>
         <button mat-menu-item routerLink="/infos-chercheurs">Gestion des infos chercheurs</button>
       </mat-menu>
 
+      <a mat-button *ngIf="!securityService.keycloakAuth.authenticated" (click)="login()">
+        Se connecter <mat-icon>touch_app</mat-icon>
+      </a>
+
+        <a mat-button [matMenuTriggerFor]="menuLogin" style="color: whitesmoke">
+          {{securityService.keycloakAuth.tokenParsed["name"]}}
+          <mat-icon *ngIf="securityService.keycloakAuth.authenticated">perm_identity</mat-icon>
+        </a>
+        <mat-menu #menuLogin="matMenu">
+          <button mat-menu-item (click)="logout()"> <mat-icon>logout</mat-icon>Se déconnecter</button>
+          <button mat-menu-item (click)="onChangePassword()"><mat-icon>autorenew</mat-icon>Changer mot de passe</button>
+        </mat-menu>
+<!--      <a mat-button routerLink="/appeloffre"> Se connecter </a>-->
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
