--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
         <button mat-menu-item [routerLink]="['/productions','Communication']">Consulter communications</button>
       </mat-menu>
 
-      <a mat-button [matMenuTriggerFor]="menuAdmin" style="margin-right: 50px">Administrateur</a>
+      <a mat-button [matMenuTriggerFor]="menuAdmin" style="margin-right: 50px">Paramétrage</a>
       <mat-menu #menuAdmin="matMenu">
         <button mat-menu-item routerLink="/users">Gestion des utlisateurs</button>
         <button mat-menu-item routerLink="/chercheurs">Gestion des chercheurs</button>
