--- a/src/app/chercheurs/chercheurs.component.css
+++ b/src/app/chercheurs/chercheurs.component.css
@@ -6,12 +6,16 @@ table {
   margin-top: 10px;
   margin-left: 8px;
 }
-.my-form{
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
-}
+
 
 .full-width {
   width: 100%;
+}
+button.mat-button .mat-icon,
+a.mat-button .mat-icon,
+a.mat-raised-button .mat-icon,
+a.mat-flat-button .mat-icon,
+a.mat-stroked-button .mat-icon {
+  vertical-align: top;
+  font-size: 1.25em;
 }
