--- a/src/app/gestion-production/gestion-production.component.css
+++ b/src/app/gestion-production/gestion-production.component.css
@@ -6,26 +6,16 @@ table {
   margin-top: 10px;
   margin-left: 8px;
 }
-.my-form{
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
-}
+
 
 .full-width {
   width: 100%;
 }
-.example-h2 {
-  margin: 10px;
-}
-
-.example-section {
-  display: flex;
-  align-content: center;
-  align-items: center;
-  height: 60px;
-}
-
-.example-margin {
-  margin: 0 10px;
+button.mat-button .mat-icon,
+a.mat-button .mat-icon,
+a.mat-raised-button .mat-icon,
+a.mat-flat-button .mat-icon,
+a.mat-stroked-button .mat-icon {
+  vertical-align: top;
+  font-size: 1.25em;
 }
