--- a/src/app/users/update/update-user.component.html
+++ b/src/app/users/update/update-user.component.html
@@ -1,7 +1,7 @@
   <!--  Formulaire d'ajout de production-->
   <!-- <div class="container mat-elevation-z8"> -->
     <mat-toolbar>
-      <span>Création compte</span>
+      <span>Mise à jour compte</span>
     </mat-toolbar>
     <mat-card class="my-card full-width">
       <div mat-dialog-content [formGroup]="form">
@@ -25,21 +25,6 @@
           <input  matInput  placeholder="Email" formControlName="mail">
           <mat-error *ngIf="hasError('mail', 'required')">Email is required</mat-error>
           <mat-error *ngIf="hasError('mail', 'email')">Email is not valid</mat-error>
-        </mat-form-field>
-
-        <!-- <mat-form-field class="full-width">
-          <mat-label>Password</mat-label>
-          <input  matInput  placeholder="Password" formControlName="password">
-          <mat-error *ngIf="hasError('password1', 'required')">Password is required</mat-error>
-        </mat-form-field> -->
-
-        <mat-form-field appearance="fill">
-          <mat-label>Password</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
-          <mat-error *ngIf="hasError('password', 'required')">Password is required</mat-error>
-          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
         </mat-form-field>
 
         <mat-form-field>
