--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -11,3 +11,11 @@ table {
 .full-width {
   width: 100%;
 }
+button.mat-button .mat-icon,
+a.mat-button .mat-icon,
+a.mat-raised-button .mat-icon,
+a.mat-flat-button .mat-icon,
+a.mat-stroked-button .mat-icon {
+  vertical-align: top;
+  font-size: 1.25em;
+}
