--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -43,3 +43,11 @@ a:active {
   margin: 0;
   width: 85%;
 }
+button.mat-button .mat-icon,
+a.mat-button .mat-icon,
+a.mat-raised-button .mat-icon,
+a.mat-flat-button .mat-icon,
+a.mat-stroked-button .mat-icon {
+  vertical-align: top;
+  font-size: 1.25em;
+}
