--- a/src/app/appeloffre/appeloffre.component.html
+++ b/src/app/appeloffre/appeloffre.component.html
@@ -4,11 +4,6 @@
       <button mat-raised-button color="primary" (click)="showForm()">Créer AO</button>
     </div>
 
-    <div class="alert alert-danger" *ngIf="succes == 'deletesuccess'">
-      <button type="button" class="close" data-dismiss="alert">&times;</button>
-      <strong>Success!</strong> <a href="#" class="alert-link"> Suppression réussie </a>.
-    </div>
-
     <mat-form-field>
       <mat-label>Recherche</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
@@ -41,7 +36,7 @@
         <th mat-header-cell *matHeaderCellDef class="text-center"> Action </th>
         <td mat-cell *matCellDef="let element" class="text-center">
           <button mat-raised-button color="primary" (click)="onGetAppeldoffre(element.idAppeloffre)">Modifier</button>
-          <button mat-raised-button color="warn" (click)="onDelete(element.idAppeloffre)">Supprimer</button>
+          <button mat-raised-button color="warn" >Supprimer</button>
         </td>
       </ng-container>
 
