--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -19,3 +19,11 @@ a.mat-stroked-button .mat-icon {
   vertical-align: top;
   font-size: 1.25em;
 }
+.example-card {
+  max-width: 350px;
+}
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
