--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,30 @@
+<!-- <div class="container">
+  <mat-card class="col-6">
+    <mat-card-header style="background-color: blue;">
+      <mat-card-title>Alioune Bada Ndoye</mat-card-title>
+    </mat-card-header>
+
+    <mat-grid-list cols="3" rowHeight="50px">
+      <mat-grid-tile [rowspan]="3" [colspan]="1">
+        <div mat-card-avatar class="example-header-image"></div>
+      </mat-grid-tile>
+
+      <mat-grid-tile [rowspan]="3" [colspan]="2">
+        <div class="container">
+          <p>Enseignant/Chercheur</p>
+          <p>abadaa9518@gmail.com</p>
+          <p>(221) 77-301-24-70</p>
+          <p>Keur Massar</p>
+        </div>
+      </mat-grid-tile>
+    </mat-grid-list>
+
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
+</div> -->
 <div class="container mat-elevation-z8">
     <div class="example-button-row">
       <button mat-raised-button color="primary" (click)="onAddUser()">Créer un utilisateur</button>
@@ -28,8 +55,9 @@
       <ng-container matColumnDef="roles">
         <th mat-header-cell *matHeaderCellDef class="text-center"> Roles </th>
         <td mat-cell *matCellDef="let element"  class="text-center">
-          <mat-label class="text-white" style="margin-right: 2px; background-color: mediumblue"
-                     *ngFor="let role of element.roles">{{role.roleName}} </mat-label>
+          <mat-label class="text-white" style="margin-right: 2px; background-color: mediumblue" *ngFor="let role of element.roles">
+                    <span class="badge"> {{role.roleName}} </span>
+          </mat-label>
         </td>
       </ng-container>
 
